tests/cases/traits/errors/trait-object-arity.ari
trait Compare[T] {
}

struct Holder {
  value: dyn Compare,
}

fn main() -> i64 {
  0
}
